--- a/plgame/src/components/Card/Card.css
+++ b/plgame/src/components/Card/Card.css
@@ -7,16 +7,39 @@
 }
 
 #hp {
-  float: right;
   color: brown;
 }
+
+.content {
+  display: inline-flex;
+  flex-wrap: nowrap;
+}
+
 .card-body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   border: black solid 0.5em;
   border-radius: 0.5em;
   width: 10em;
-  float: left;
   margin: 0.2em;
   padding: 0.1em 0.1em 0.1em 0.1em;
+}
+
+.description {
+  font-size: 0.7em;
+  border: 0.1em black solid;
+  margin: 0.2em;
+  padding: 0.2em;
+}
+
+.description div {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.image {
+  text-align: center;
+}
+
+img {
+  max-width: 70%;
 }
