--- a/plgame/src/components/Card/Card.css
+++ b/plgame/src/components/Card/Card.css
@@ -1,6 +1,8 @@
 .card-header {
   margin-left: 0.3em;
   margin-right: 0.3em;
+  display: flex;
+  flex-wrap: nowrap;
 }
 #name {
   font-size: 1em;
@@ -8,11 +10,13 @@
 
 #hp {
   color: brown;
+  margin-left: auto;
 }
 
 .content {
   display: inline-flex;
   flex-wrap: nowrap;
+  text-align: left;
 }
 
 .card-body {
