--- a/plgame/src/components/Stage/Stage.css
+++ b/plgame/src/components/Stage/Stage.css
@@ -1,23 +1,16 @@
 .component {
   border: 0.6em black solid;
+  display: inline-block;
 }
 
-.stage {
-  /* position: relative;
-  top: 20em;
-  bottom: 1em;
-  width: 100%; */
+.stage-content {
+  text-align: center;
+  padding: 1em;
 }
 
-/* #enemy,
-#friendly {
-  position: absolute;
-} */
-
-/* #enemy {
-  top: 0;
+#versus {
+  text-align: center;
+  font-size: 5em;
+  color: red;
+  margin: 1em 0 1em 0;
 }
-
-#friendly {
-  bottom: 0;
-} */
